# elang

./: .gitignore  CMakeLists.txt  parser.output  parser.tab.c  parser.y  scanner.l  ui_mainwindow.h
src/: ast.cpp  ast.h  highlighter.cpp  highlighter.h  main.cpp  maingui.cpp  mainwindow.cpp  mainwindow.h  moc_highlighter.cxx  moc_highlighter.cxx_parameters  moc_mainwindow.cxx  moc_mainwindow.cxx_parameters  parser.cpp  parser.hpp  scanner.cpp  value.cpp  value.h
ui/: mainwindow.ui
